--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,13 +1,16 @@
-.thread-comment
-  .thread-comment__author
-    = link_to report, itempro: 'url', class: 'thread-comment__author-link' do
-      = gravatar_tag comment.user, secure: true, size: 200, html: { class: "thread-comment__author-icon"}
+.thread-comment.is-no-author-icon
   .thread-comment__body
-    header.thread-comment__body-header
-      h2.thread-comment__login-name
-        = link_to report, itempro: 'url', class: 'thread-comment__login-name-link' do
+    header.thread-comment__body-header.is-icon
+      = gravatar_tag report.user, secure: true, size: 88, html: { class: "thread-comment__user-icon"}
+      h2.thread-comment__title
+        = link_to report, itempro: 'url', class: 'thread-comment__title-link' do
+          span.thread-comment__title-label
+            | #{report.user.login_name}さんの#{l report.created_at, format: :date_default}の日報
           = report.title
-        = gravatar_tag report.user, secure: true, size: 30, html: { class: "recent-reports-item__user-icon"}
+          .thread-comment__title-count
+            i.fa.fa-comment-o
+            = report.comments.size
+
       time.thread-comment__created-at(datetime='#{report.created_at.to_datetime}' pubdate='pubdate')
         = l comment.updated_at, format: :date_long_with_time
     .thread-comments__description.js-markdown-view.js-target-blank.is-long-text-style
