--- a/app/views/products/comments/_comment.html.slim
+++ b/app/views/products/comments/_comment.html.slim
@@ -4,8 +4,8 @@
       = gravatar_tag comment.user, secure: true, size: 200, html: { class: "thread-comment__author-icon"}
   .thread-comment__body
     header.thread-comment__body-header
-      h2.thread-comment__login-name
-        = link_to comment.user, itempro: 'url', class: 'thread-comment__login-name-link' do
+      h2.thread-comment__title
+        = link_to comment.user, itempro: 'url', class: 'thread-comment__title-link' do
           = comment.user.login_name
       time.thread-comment__created-at(datetime='#{product.created_at.to_datetime}' pubdate='pubdate')
         = l comment.updated_at, format: :date_long_with_time
