質問フォームにプラクティスを追加

--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -9,4 +9,4 @@ header.page-header
         = t('to_index_of_questions')
 .page-body
   .container
-      = render 'form', question: @question
+      = render 'form', question: @question, categories: @categories
