管理者がユーザー情報編集ページで卒業をチェックして更新したらshowページに卒業日時を表示する機能を追加した

--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -32,6 +32,12 @@ header.page-header
                 = t('helpers.label.user.updated_at')
               .user-dates__update-at-value
                 = l @user.updated_at, format: :long
+            - if @user.graduated_at.present?
+              .user-dates__graduated-at
+                .user-dates__graduated-at-label
+                  = t('helpers.label.user.graduated_at')
+                .user-dates__graduated-at-value
+                  = l @user.graduated_at, format: :long
         .col-md-9.col-xs-12
           table.admin-table
             thead.admin-table__header
