--- a/app/assets/stylesheets/blocks/user/_user_dates.sass
+++ b/app/assets/stylesheets/blocks/user/_user_dates.sass
@@ -7,6 +7,9 @@
 .user-dates__update-at
   +text-block(.8125rem 1.45)
 
+.user-dates__graduated-at
+  +text-block(.8125rem 1.45)
+
 .user-dates__created-at-label,
 .user-dates__created-at-value
   display: inline-block
