sort と tab の間の margin を削除

--- a/app/assets/stylesheets/blocks/shared/_tab-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_tab-nav.sass
@@ -1,6 +1,8 @@
 .tab-nav
   margin-bottom: 1.5rem
   border-bottom: solid 1px $background-color-shade
+  &.is-delete-margin-top
+    margin-top: -1.5rem
 
 .tab-nav__items
   display: flex
