--- a/app/views/practices/questions/index.html.slim
+++ b/app/views/practices/questions/index.html.slim
@@ -12,7 +12,7 @@ header.page-header
 = render "page_tabs", resource: @practice
 
 .page-body
-  nav.tab-nav
+  nav.tab-nav.is-delete-margin-top
     .container.is-xs-horizontal-padding-0
       ul.tab-nav__items
         li.tab-nav__item
