--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -19,7 +19,7 @@ header.page-header.is-margin-bottom-0
           = label_tag :practice_id, 'プラクティスで絞り込む:', class: 'sort-nav__label'
           .is-button-simple-md-secondary.is-select.sort-nav__select
             = select_tag :practice_id, options_from_collection_for_select(Practice.all, :id, :title, { selected: params[:practice_id] }), include_blank: '全ての日報を表示', onchange: "this.form.submit()"
-    nav.tab-nav
+    nav.tab-nav.is-delete-margin-top
       .container.is-xs-horizontal-padding-0
         ul.tab-nav__items
           li.tab-nav__item
