QA周りのページにデザイン

--- a/app/assets/stylesheets/blocks/page/_page-header-actions.sass
+++ b/app/assets/stylesheets/blocks/page/_page-header-actions.sass
@@ -1,6 +1,9 @@
 .page-header-actions
   +media-breakpoint-down(sm)
     margin-top: .75rem
+    padding-top: .75rem
+    +margin(horizontal, -1rem)
+    border-top: solid 1px $background-color
 
 .page-header-actions__items
   display: flex
