--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -9,7 +9,7 @@ header.page-header
           li.page-header-actions__item
             = link_to new_question_path, class: "is-button-simple-md-warning" do
               i.fas.fa-plus
-              | みんなに聞いてみる
+              | みんなに聞く
           li.page-header-actions__item
             = link_to questions_path, class: "is-button-simple-md-secondary" do
               i.fas.fa-angle-left
