--- a/app/views/application/_page_tab.html.slim
+++ b/app/views/application/_page_tab.html.slim
@@ -1,3 +1,3 @@
 li.page-tabs__item
-  = link_to member[:path], class: "page-tabs__item-link #{current_page_tab_or_not(member[:target_name])}" do
-    = member[:display_name]
+  = link_to tab[:path], class: "page-tabs__item-link #{current_page_tab_or_not(tab[:target_name])}" do
+    = tab[:display_name]
