--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -12,6 +12,10 @@
             i.fas.fa-pen
           = link_to question_path(question), data: { confirm: t("are_you_sure") }, method: :delete, class: "thread-list-item__actions-link" do
             i.fas.fa-trash-alt
+    - if question.practice
+      h3.thread-list-item__sub-title
+        = link_to question.practice, class: "thread-list-item__sub-title-link" do
+          = question.practice.title
     .thread-list-item-meta
       time.thread-list-item-meta__updated-at(datetime="#{question.updated_at.to_datetime}" pubdate="pubdate")
         = l question.updated_at, format: :semi_long
