--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -18,7 +18,7 @@ header.page-header.is-margin-bottom-0
           = hidden_field_tag :solved, params[:solved]
           = label_tag :practice_id, 'プラクティスで絞り込む:', class: 'sort-nav__label'
           .is-button-simple-md-secondary.is-select.sort-nav__select
-            = select_tag :practice_id, options_from_collection_for_select(Practice.all, :id, :title, { selected: params[:practice_id] }), include_blank: '全ての日報を表示', onchange: "this.form.submit()"
+            = select_tag :practice_id, options_from_collection_for_select(Practice.all, :id, :title, { selected: params[:practice_id] }), include_blank: '全ての質問を表示', onchange: "this.form.submit()"
     nav.tab-nav.is-delete-margin-top
       .container.is-xs-horizontal-padding-0
         ul.tab-nav__items
@@ -28,5 +28,9 @@ header.page-header.is-margin-bottom-0
             = link_to "解決済み", polymorphic_path(:questions, solved: 'true', practice_id: params[:practice_id]), class: "tab-nav__item-link #{params[:solved].present? ? 'is-active' : ''}"
 
   .container
-    .thread-list
-      = render @questions
+    - if @questions.present?
+      .thread-list
+        = render @questions
+    - else
+      .thread-list.is-empty
+        | 質問はまだありません。
