編集ページに右カラムを表示しないようにした

--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -43,6 +43,9 @@ body
     padding-right: 3rem
     +media-breakpoint-down(sm)
       +padding(horizontal, 1rem)
+  body.is-edit-page &,
+  body.is-admin &
+    padding-right: 1rem
 
 body.welcome
   .container
