--- a/app/assets/stylesheets/blocks/form/_form.sass
+++ b/app/assets/stylesheets/blocks/form/_form.sass
@@ -2,6 +2,10 @@
   max-width: 87.5rem
   +margin(horizontal, auto)
 
+.form__items
+  max-width: 82rem
+  +margin(horizontal, auto)
+
 .form-item
   margin-bottom: 1rem
   &:last-child
