--- a/app/assets/stylesheets/blocks/shared/_errors.sass
+++ b/app/assets/stylesheets/blocks/shared/_errors.sass
@@ -3,6 +3,8 @@
   border: solid 1px $danger
   margin-bottom: 1.25rem
   padding: 1rem 1.5rem
+  max-width: 30rem
+  +margin(horizontal, auto)
 
 .errors__title
   +text-block(.875rem 1.45 .8em, center 600 #6e3a47)
