提出物がないプラクティスにデザイン

--- a/app/assets/stylesheets/blocks/practice/_practice-content-actions.sass
+++ b/app/assets/stylesheets/blocks/practice/_practice-content-actions.sass
@@ -1,4 +1,5 @@
-.practice-content-actions
+.practice-content-actions__description
+  +text-block(.8125rem 1.5 .75rem, center)
 
 .practice-content-actions__items
   display: flex
