お知らせの更新と個別表示を追加

--- a/app/views/announcements/_form.html.slim
+++ b/app/views/announcements/_form.html.slim
@@ -1,4 +1,4 @@
-/ = render 'errors', object: report
+= render 'errors', object: announcement
 = form_for @announcement do |f|
   .form__items
     .form-item
