--- a/app/views/announcements/index.html.slim
+++ b/app/views/announcements/index.html.slim
@@ -6,10 +6,11 @@ header.page-header.is-margin-bottom-0.has-border-bottom-none
       h2.page-header__title= title
       .page-header-actions
         .page-header-actions__items
-          .page-header-actions__item
-            = link_to new_announcement_path, class: 'is-button-simple-md-warning' do
-              i.fa.fa-plus
-              = t('new_announcement')
+          - if admin_login?
+            .page-header-actions__item
+              = link_to new_announcement_path, class: 'is-button-simple-md-warning' do
+                i.fa.fa-plus
+                = t('new_announcement')
 
 .page-body
   .container
