--- a/app/views/announcements/_form.html.slim
+++ b/app/views/announcements/_form.html.slim
@@ -19,5 +19,12 @@
   .form-actions
     ul.form-actions__items
       li.form-actions__item.is-main.is-help
-        = f.submit "作成", class: 'is-button-simple-lg-warning is-block', id: "js-shortcut-submit"
-        .form-actions__item-help
+        - if announcement.new_record?
+          = f.submit "作成", class: 'is-button-simple-lg-warning is-block', id: "js-shortcut-submit"
+        - else
+          = f.submit "内容変更", class: 'is-button-simple-lg-warning is-block', id: "js-shortcut-submit"
+      li.form-actions__item
+        - if params[:action] == 'new' || params[:action] == 'create'
+          = link_to 'キャンセル', announcements_path, class: "is-button-simple-md-secondary"
+        - elsif params[:action] == 'edit' || params[:action] == 'update'
+          = link_to 'キャンセル', announcement_path, class: "is-button-simple-md-secondary"
