--- a/app/views/announcements/index.html.slim
+++ b/app/views/announcements/index.html.slim
@@ -14,6 +14,7 @@ header.page-header.is-margin-bottom-0.has-border-bottom-none
 
 .page-body
   .container
-    - if @announcements.present?
+    = paginate @announcements, position: "top"
     .thread-list
       = render partial: 'announcements/announcement_list_item', collection: @announcements, as: :announcement
+    = paginate @announcements, position: "bottom"
