--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,5 +1,7 @@
 .comment__form
-  = form_for comment_form_object(@comment) do |f|
+  = form_for comment do |f|
+    = f.hidden_field :commentable_type
+    = f.hidden_field :commentable_id
     .form__items
       .form-item
         .row.js-markdown-parent
@@ -7,7 +9,7 @@
             .form-group
               label.a-label
                 | 内容
-              = f.text_area :description, required: true, class: 'a-textarea js-warning-form markdown-form__text-area js-markdown', data: { "preview": ".js-preview" }
+              = f.text_area :description, required: true, class: "a-textarea js-warning-form markdown-form__text-area js-markdown", data: { "preview": ".js-preview" }
           .col-md-6.col-xs-12
             label.a-label
               | プレビュー
@@ -16,6 +18,5 @@
     .form-actions
       ul.form-actions__items
         li.form-actions__item
-          = f.submit nil, class: 'is-button-simple-lg-warning'
-        li.form-actions__item
-          = link_to 'キャンセル', @comment.commentable.path, class: "is-button-simple-md-secondary"
+          - comment_label = comment.persisted? ? "保存する" : "コメントする"
+          = f.submit comment_label, class: "is-button-simple-lg-warning"
