--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -7,17 +7,7 @@ header.page-header
 .page-body
   .container
     = render "product", product: @product
-    .thread-comments-container
-      h2.thread-comments-container__title
-        | レビュー・コメント
-        span.thread-comments-container__title-count
-          = @product.comments.count
-      .thread-comments
-        - if @product.comments.any?
-          - @product.comments.order(:created_at).each do |comment|
-            = render "products/comments/comment", product: @product, comment: comment
-      = render "products/comments/form", product: @product, comment: @product.comments.new
-
+    = render "comments/comments", comments: @product.comments.order(:created_at)
     - if @product.user == current_user
       .form-actions
         ul.form-actions__items
